--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
   #   depends_on:
   #     - api
   api:
-    container_name: LibreChat
+    container_name: DavinciChat
     ports:
       - 3080:3080               # Change it to 9000:3080 to use nginx
     depends_on:
       - mongodb
-    image: librechat                # Comment this & uncomment below to build from docker hub image
+    image: davincichat                # Comment this & uncomment below to build from docker hub image
     build:                                   # ^------
       context: .                              # ^------
       target: node                             # ^------v
@@ -31,7 +31,7 @@ services:
       - .env
     environment:
       - HOST=0.0.0.0
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MONGO_URI=mongodb://mongodb:27017/DavinciChat
       # - CHATGPT_REVERSE_PROXY=http://host.docker.internal:8080/api/conversation # if you are hosting your own chatgpt reverse proxy with docker
       # - OPENAI_REVERSE_PROXY=http://host.docker.internal:8070/v1/chat/completions # if you are hosting your own chatgpt reverse proxy with docker
       - MEILI_HOST=http://meilisearch:7700
